2.3.0-Alpha1
Added Tooltips to pageadmin
Added functionality for hardcoded textstrings
fix: Item Data field filtering broke JSON data content

2.2.0
No changes from RC3

2.2.0-RC3
Added config options to whitelist html tags for the text in items, itemgroups, pages and textcats
Added config option to loosen filtering of html tags for the text in items, itemgroups, pages and textcats
Itemadmin: It is now possible to use html-tags in the itemname again, but only in "Name Override", not in "Name" itself

2.2.0-RC2
made serveral directory names configurable

2.2.0-RC1
Removed cl_background and cl_pdf from content_lang - legacy, unneeded
Added the Aura Autoloader
Rewrite of page handling
Moved all page related stuff to new page objects
Added new directory /customviews for easier upgrading
Removed serveral files for easier upgrading
Moved admin area from web directory to internal routing
Moved markup from adminhome to twig template
Added tool to encrypt admin passwords to /_admin/index.html
If there are no admin users set in config.scrts.yml, you can access /_admin/index.html without authenticating to use the encryption tool
Moved templatecache to new central cache directory
Now uses HTMLPurifier to sanitize input
added input sanitizing for itemsearch, pageadmin, submitshoppingcart, login, register, editprofile, forgotpw, shopadmin, textcatadmin, itemadmin, itemgroupadmin

2.1.0
now works with hosting at 1&1 and other mass hosters
pageadmin: removed admin from list of options for page subnav
moved admin navi from config to init
useradmin.twig was renamed to customeradmin.twig, userhome.twig was renamed to customerhome.twig
pageadmin/add page: added check for reserved path "/_"
moved all files from web/_misc/ to internal routing
simplified the update-cart script
if no items are available on itemoverview-page, display message
fixed: item search
added new page type "shorturl", implementation
replaced include with require